--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "gatsby": "^2.0.0",
+    "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-offline": "^2.0.6",
     "react": "^16.5.1",
     "react-dom": "^16.5.1"
   },
