initial implementation of nav component

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.6",
     "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react-burger-menu": "^2.5.4",
+    "react-dom": "^16.5.1",
+    "react-hamburger-menu": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
