--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-emotion": "^9.2.12",
+    "react-helmet": "^5.2.0",
     "react-responsive": "^5.0.0",
     "react-typography": "^0.16.13",
     "typography": "^0.16.17",
