--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "emotion-server": "^9.2.12",
     "gatsby": "^2.0.0",
     "gatsby-plugin-emotion": "^2.0.5",
+    "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.6",
     "gatsby-plugin-typography": "^2.2.0",
