--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.6",
+    "gatsby-plugin-react-helmet": "^3.0.1",
     "gatsby-plugin-typography": "^2.2.0",
     "gatsby-source-filesystem": "^2.0.5",
     "gatsby-transformer-remark": "^2.1.8",
