fixing nav on resize and adding new post

--- a/package.json
+++ b/package.json
@@ -13,22 +13,27 @@
     "url": "git@github-gabroun:gabroun/gatsby-site.git"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.7",
-    "@fortawesome/free-brands-svg-icons": "^5.4.2",
-    "@fortawesome/free-solid-svg-icons": "^5.4.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
-    "gatsby": "^2.0.0",
-    "gatsby-plugin-emotion": "^2.0.5",
-    "gatsby-plugin-google-analytics": "^2.0.6",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.6",
-    "gatsby-plugin-typography": "^2.2.0",
-    "gatsby-source-filesystem": "^2.0.5",
-    "gatsby-transformer-remark": "^2.1.8",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "gatsby": "^2.0.38",
+    "gatsby-plugin-emotion": "^2.0.6",
+    "gatsby-plugin-google-analytics": "^2.0.7",
+    "gatsby-plugin-manifest": "^2.0.7",
+    "gatsby-plugin-offline": "^2.0.11",
+    "gatsby-plugin-react-helmet": "^3.0.1",
+    "gatsby-plugin-sharp": "^2.0.11",
+    "gatsby-plugin-typography": "^2.2.1",
+    "gatsby-remark-images": "^2.0.5",
+    "gatsby-remark-prismjs": "^3.0.3",
+    "gatsby-source-filesystem": "^2.0.7",
+    "gatsby-transformer-remark": "^2.1.11",
+    "prismjs": "^1.15.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
     "react-responsive": "^5.0.0",
@@ -42,11 +47,11 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "css-loader": "^1.0.0",
+    "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.20.2",
+    "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-dev-server": "^3.1.10"
   }
 }
