updating header component to use react-media instead of window.innerWidth

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.6.0",
     "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
+    "react-media": "^1.8.0",
     "react-responsive": "^5.0.0",
     "react-typography": "^0.16.13",
     "typography": "^0.16.17",
