--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-remark-prismjs": "^3.0.3",
     "gatsby-source-filesystem": "^2.0.7",
     "gatsby-transformer-remark": "^2.1.11",
+    "jest": "^23.6.0",
     "prismjs": "^1.15.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
