--- a/package.json
+++ b/package.json
@@ -19,22 +19,25 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
-    "gatsby": "^2.0.38",
+    "gatsby": "^2.0.55",
+    "gatsby-cli": "^2.4.5",
+    "gatsby-image": "^2.0.20",
     "gatsby-plugin-emotion": "^2.0.6",
     "gatsby-plugin-google-analytics": "^2.0.7",
-    "gatsby-plugin-manifest": "^2.0.7",
-    "gatsby-plugin-offline": "^2.0.11",
-    "gatsby-plugin-react-helmet": "^3.0.1",
-    "gatsby-plugin-sharp": "^2.0.11",
+    "gatsby-plugin-manifest": "^2.0.10",
+    "gatsby-plugin-offline": "^2.0.17",
+    "gatsby-plugin-react-helmet": "^3.0.2",
+    "gatsby-plugin-sharp": "^2.0.13",
     "gatsby-plugin-typography": "^2.2.1",
-    "gatsby-remark-images": "^2.0.5",
+    "gatsby-remark-images": "^2.0.6",
     "gatsby-remark-prismjs": "^3.0.3",
-    "gatsby-source-filesystem": "^2.0.7",
-    "gatsby-transformer-remark": "^2.1.11",
+    "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-transformer-remark": "^2.1.12",
+    "gatsby-transformer-sharp": "^2.1.8",
     "jest": "^23.6.0",
     "prismjs": "^1.15.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
     "react-media": "^1.8.0",
@@ -45,14 +48,14 @@
     "typography-theme-kirkham": "^0.16.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.24.0",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   }
