--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-site",
+  "name": "malikgabroun-website",
   "description": "",
   "author": "Malik Elgabroun",
   "license": "ISC",
@@ -10,55 +10,56 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github-gabroun:gabroun/gatsby-site.git"
+    "url": "git@github-gabroun:gabroun/malikgabroun.git"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/free-brands-svg-icons": "^5.5.0",
-    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-brands-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
-    "gatsby": "^2.0.55",
-    "gatsby-cli": "^2.4.5",
-    "gatsby-image": "^2.0.20",
-    "gatsby-plugin-emotion": "^2.0.6",
-    "gatsby-plugin-google-analytics": "^2.0.7",
-    "gatsby-plugin-manifest": "^2.0.10",
-    "gatsby-plugin-offline": "^2.0.17",
-    "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "^2.0.13",
-    "gatsby-plugin-styled-components": "^3.0.3",
-    "gatsby-plugin-typography": "^2.2.1",
+    "gatsby": "^2.0.75",
+    "gatsby-cli": "^2.4.7",
+    "gatsby-image": "^2.0.25",
+    "gatsby-plugin-emotion": "^2.0.7",
+    "gatsby-plugin-google-analytics": "^2.0.8",
+    "gatsby-plugin-manifest": "^2.0.12",
+    "gatsby-plugin-nprogress": "^2.0.7",
+    "gatsby-plugin-offline": "^2.0.20",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-sharp": "^2.0.16",
+    "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-typography": "^2.2.4",
     "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-prismjs": "^3.0.3",
-    "gatsby-source-filesystem": "^2.0.8",
-    "gatsby-transformer-remark": "^2.1.12",
-    "gatsby-transformer-sharp": "^2.1.8",
+    "gatsby-remark-prismjs": "^3.1.4",
+    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-remark": "^2.1.17",
+    "gatsby-transformer-sharp": "^2.1.9",
     "jest": "^23.6.0",
     "prismjs": "^1.15.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
-    "react-media": "^1.8.0",
+    "react-media": "^1.9.2",
     "react-responsive": "^5.0.0",
-    "react-typography": "^0.16.13",
-    "styled-components": "^4.1.1",
-    "typography": "^0.16.17",
+    "react-typography": "^0.16.18",
+    "styled-components": "^4.1.3",
+    "typography": "^0.16.18",
     "typography-theme-fairy-gates": "^0.15.11",
-    "typography-theme-kirkham": "^0.16.3"
+    "typography-theme-kirkham": "^0.16.18"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.26.0",
+    "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.13"
   }
 }
