--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "malikgabroun-website",
-  "description": "",
+  "name": "malikgabroun",
+  "description": "personal website",
   "author": "Malik Elgabroun",
   "license": "ISC",
   "scripts": {
@@ -45,9 +45,9 @@
     "react-media": "^1.9.2",
     "react-responsive": "^5.0.0",
     "react-typography": "^0.16.18",
-    "styled-components": "^4.1.3",
+    "styled-components": "^3.4.10",
     "typography": "^0.16.18",
-    "typography-theme-fairy-gates": "^0.15.11",
+    "typography-theme-fairy-gates": "^0.16.18",
     "typography-theme-kirkham": "^0.16.18"
   },
   "devDependencies": {
@@ -55,6 +55,7 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-styled-components": "^1.10.0",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
