--- a/package.json
+++ b/package.json
@@ -58,9 +58,6 @@
     "babel-plugin-styled-components": "^1.10.0",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.28.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.13"
+    "style-loader": "^0.23.1"
   }
 }
