--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "no-console": "warn"
   },
   "plugins": ["react", "import", "jsx-a11y"],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
