--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
     "react-media": "^1.9.2",
-    "react-responsive": "^5.0.0",
     "react-test-renderer": "^16.7.0",
     "react-typography": "^0.16.18",
     "styled-components": "^3.4.10",
@@ -65,9 +64,6 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.10.0",
-    "babel-preset-gatsby": "^0.1.6",
-    "css-loader": "^1.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.23.1"
+    "babel-preset-gatsby": "^0.1.6"
   }
 }
