--- a/package.json
+++ b/package.json
@@ -21,12 +21,6 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
-    "eslint": "^5.12.1",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
     "gatsby": "^2.0.75",
     "gatsby-cli": "^2.4.7",
     "gatsby-image": "^2.0.25",
@@ -41,10 +35,9 @@
     "gatsby-plugin-typography": "^2.2.4",
     "gatsby-remark-images": "^2.0.6",
     "gatsby-remark-prismjs": "^3.1.4",
-    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "^2.1.17",
     "gatsby-transformer-sharp": "^2.1.9",
-    "jest": "^23.6.0",
     "prismjs": "^1.15.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -54,9 +47,7 @@
     "react-test-renderer": "^16.7.0",
     "react-typography": "^0.16.18",
     "styled-components": "^3.4.10",
-    "typography": "^0.16.18",
-    "typography-theme-fairy-gates": "^0.16.18",
-    "typography-theme-kirkham": "^0.16.18"
+    "typography": "^0.16.18"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -65,6 +56,13 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.10.0",
-    "babel-preset-gatsby": "^0.1.6"
+    "babel-preset-gatsby": "^0.1.6",
+    "eslint": "^5.12.1",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "^23.6.0"
   }
 }
