--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "url": "git@github-gabroun:gabroun/malikgabroun.git"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-brands-svg-icons": "^5.6.3",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@fortawesome/react-fontawesome": "^0.1.3",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
     "gatsby": "^2.0.75",
@@ -35,7 +32,7 @@
     "gatsby-plugin-typography": "^2.2.4",
     "gatsby-remark-images": "^2.0.6",
     "gatsby-remark-prismjs": "^3.1.4",
-    "gatsby-source-filesystem": "^2.0.23",
+    "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-remark": "^2.1.17",
     "gatsby-transformer-sharp": "^2.1.9",
     "prismjs": "^1.15.0",
@@ -45,8 +42,9 @@
     "react-helmet": "^5.2.0",
     "react-media": "^1.9.2",
     "react-test-renderer": "^16.7.0",
-    "react-typography": "^0.16.18",
+    "react-typography": "^0.16.19",
     "styled-components": "^3.4.10",
+    "typeface-rambla": "0.0.72",
     "typography": "^0.16.18"
   },
   "devDependencies": {
