--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-transformer-remark": "^2.6.14",
     "gatsby-transformer-sharp": "^2.2.6",
     "prismjs": "^1.17.1",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-emotion": "^9.2.12",
