--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "url": "git@github-gabroun:gabroun/malikgabroun.git"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.3",
+    "@mdx-js/react": "^1.5.3",
     "gatsby": "^2.18.15",
     "gatsby-cli": "^2.7.31",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-google-analytics": "^2.1.7",
     "gatsby-plugin-manifest": "^2.2.5",
+    "gatsby-plugin-mdx": "^1.0.64",
+    "gatsby-plugin-mdx-prismjs": "^1.0.4",
     "gatsby-plugin-nprogress": "^2.1.2",
     "gatsby-plugin-offline": "^2.2.6",
     "gatsby-plugin-react-helmet": "^3.1.3",
@@ -31,6 +35,7 @@
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-remark": "^2.6.14",
     "gatsby-transformer-sharp": "^2.2.6",
+    "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
