--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "malikgabroun",
+  "name": "malikgabroun.com",
   "description": "personal website",
   "author": "Malik Elgabroun",
-  "license": "ISC",
+  "license": "MIT",
   "scripts": {
     "develop": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "build": "gatsby build",
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.18.15",
     "gatsby-cli": "^2.7.31",
     "gatsby-image": "^2.2.8",
@@ -28,6 +29,7 @@
     "gatsby-plugin-offline": "^2.2.6",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.12",
+    "gatsby-plugin-sitemap": "^2.2.26",
     "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-typography": "^2.3.2",
     "gatsby-remark-images": "^2.0.6",
