--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
+    "algoliasearch": "^3.35.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.18.15",
     "gatsby-cli": "^2.7.31",
     "gatsby-image": "^2.2.8",
+    "gatsby-plugin-algolia": "^0.5.0",
     "gatsby-plugin-google-analytics": "^2.1.7",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-mdx": "^1.0.64",
@@ -43,6 +45,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^6.1.0",
     "react-media": "^1.9.2",
     "react-test-renderer": "^16.9.0",
     "react-typography": "^0.16.19",
