--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": [
     "plugin:import/errors",
     "plugin:react/recommended",
+    "plugin:mdx/recommended",
     "plugin:jsx-a11y/recommended",
     "prettier",
     "prettier/react"
@@ -9,9 +10,11 @@
   "rules": {
     "react/prop-types": 0,
     "jsx-a11y/label-has-for": 0,
-    "no-console": "warn"
+    "no-console": "warn",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
-  "plugins": ["react", "import", "jsx-a11y"],
+  "plugins": ["react", "react-hooks", "import", "jsx-a11y"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2018,
