--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-test-renderer": "^16.9.0",
     "react-typography": "^0.16.19",
     "styled-components": "^5.0.0",
+    "styled-icons": "^9.2.0",
     "typeface-rambla": "0.0.72",
     "typography": "^0.16.19"
   },
@@ -65,8 +66,10 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-mdx": "^1.6.5",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "jest": "^25.0.0"
   }
 }
