--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "@mdx-js/react": "^1.5.8",
     "dotenv": "^8.2.0",
     "gatsby": "^2.20.12",
-    "gatsby-cli": "^2.11.5",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-mdx": "^1.1.4",
     "gatsby-plugin-mdx-prismjs": "^1.0.4",
+    "gatsby-plugin-meta-redirect": "^1.1.1",
+    "gatsby-plugin-netlify": "^2.3.11",
     "gatsby-plugin-nprogress": "^2.2.1",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-sitemap": "^2.3.1",
     "gatsby-plugin-styled-components": "^3.2.1",
