commenting portfolio section, adding 2 posts from medium, post template style updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,22 @@
         "latex",
         "plaintext",
         "javascript"
-    ]
+    ],
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#f79e78",
+        "activityBar.activeBorder": "#077829",
+        "activityBar.background": "#f79e78",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#077829",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "statusBar.background": "#f47c48",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#f15a18",
+        "titleBar.activeBackground": "#f47c48",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#f47c4899",
+        "titleBar.inactiveForeground": "#15202b99"
+    },
+    "peacock.color": "#f47c48"
 }
