--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mdx-js/mdx": "^1.5.8",
     "@mdx-js/react": "^1.5.8",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.20.12",
+    "formik": "^2.2.0",
+    "gatsby": "^2.24.80",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-manifest": "^2.3.3",
