--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.4.3",
+    "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.0.2",
-    "prismjs": "^1.20.0",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
