--- a/.eslintrc
+++ b/.eslintrc
@@ -30,14 +30,10 @@
   "settings": {
     "import/resolver": {
       "alias": [
-        [
-          "@components",
-          "./src/components"
-        ],
-        [
-          "@static",
-          "./static"
-        ]
+        ["@components", "./src/components"],
+        ["@static", "./static"],
+        ["@utils", "./src/utils"],
+        ["@resources", "./src/resources"]
       ]
     }
   }
