--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "build": "gatsby build",
     "serve:prod": "gatsby build && gatsby serve",
-    "test": "jest --silent",
-    "test:update": "jest --silent -u"
+    "test": "jest",
+    "test:update": "jest --silent -u",
+    "cy:open": "cypress open",
+    "test:e2e": "start-server-and-test start http://localhost:8000 cy:open"
   },
   "repository": {
     "type": "git",
@@ -27,7 +29,6 @@
     "gatsby-plugin-mdx-prismjs": "^1.0.4",
     "gatsby-plugin-meta-redirect": "^1.1.1",
     "gatsby-plugin-netlify": "^2.11.1",
-    "gatsby-plugin-nprogress": "^2.10.0",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
@@ -60,10 +61,16 @@
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
-    "babel-jest": "^25.5.1",
+    "@testing-library/cypress": "^8.0.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "axe-core": "^4.3.5",
+    "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.13.2",
     "babel-preset-gatsby": "^0.1.11",
+    "cypress": "^8.7.0",
+    "cypress-axe": "^0.13.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -72,6 +79,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "gatsby-remark-code-titles": "^1.1.0",
-    "jest": "^25.5.4"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.3.1",
+    "start-server-and-test": "^1.14.0"
   }
 }
