--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "malikgabroun.com",
   "description": "personal website",
   "author": "Malik Elgabroun",
+  "private": true,
   "license": "MIT",
   "scripts": {
     "start": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
@@ -17,6 +18,8 @@
     "url": "git@github-gabroun:gabroun/malikgabroun.git"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^0.1.20",
+    "@fontsource/fira-mono": "^4.5.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "dotenv": "^8.6.0",
@@ -54,7 +57,6 @@
     "react-test-renderer": "^16.14.0",
     "react-typography": "^0.16.20",
     "styled-components": "^5.3.0",
-    "typeface-rambla": "0.0.72",
     "typography": "^0.16.21"
   },
   "devDependencies": {
