--- a/package.json
+++ b/package.json
@@ -18,43 +18,44 @@
     "url": "git@github-gabroun:gabroun/malikgabroun.git"
   },
   "dependencies": {
-    "@codesandbox/sandpack-react": "^0.1.20",
+    "@codesandbox/sandpack-react": "^0.12.0",
     "@fontsource/fira-mono": "^4.5.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "dotenv": "^8.6.0",
+    "dotenv": "^11.0.0",
     "formik": "^2.2.9",
-    "gatsby": "^2.32.13",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-google-analytics": "^2.11.0",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-mdx": "^1.10.1",
+    "gatsby": "^4.5.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-google-analytics": "^4.5.0",
+    "gatsby-plugin-image": "^2.5.0",
+    "gatsby-plugin-manifest": "^4.5.0",
+    "gatsby-plugin-mdx": "^3.5.0",
     "gatsby-plugin-mdx-prismjs": "^1.0.4",
     "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-netlify": "^2.11.1",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-offline": "^5.5.0",
+    "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-robots-txt": "^1.6.8",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-plugin-styled-components": "^3.10.0",
-    "gatsby-plugin-typography": "^2.12.0",
-    "gatsby-remark-autolink-headers": "^3.2.0",
-    "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-prismjs": "^3.13.0",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-remark": "^2.16.1",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-plugin-sharp": "^4.5.0",
+    "gatsby-plugin-sitemap": "^5.5.0",
+    "gatsby-plugin-styled-components": "^5.5.0",
+    "gatsby-plugin-typography": "^4.5.0",
+    "gatsby-remark-autolink-headers": "^5.5.0",
+    "gatsby-remark-images": "^6.5.0",
+    "gatsby-remark-prismjs": "^6.5.0",
+    "gatsby-source-filesystem": "^4.5.0",
+    "gatsby-transformer-remark": "^5.5.0",
+    "gatsby-transformer-sharp": "^4.5.0",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.2.1",
     "prismjs": "^1.24.1",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^5.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-media": "^1.10.0",
-    "react-test-renderer": "^16.14.0",
+    "react-test-renderer": "^17.0.2",
     "react-typography": "^0.16.20",
     "styled-components": "^5.3.0",
     "typography": "^0.16.21"
@@ -70,16 +71,16 @@
     "axe-core": "^4.3.5",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.13.2",
-    "babel-preset-gatsby": "^0.1.11",
-    "cypress": "^8.7.0",
-    "cypress-axe": "^0.13.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
+    "babel-plugin-styled-components": "^2.0.2",
+    "babel-preset-gatsby": "^2.5.0",
+    "cypress": "^9.2.1",
+    "cypress-axe": "^0.14.0",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
     "gatsby-remark-code-titles": "^1.1.0",
     "identity-obj-proxy": "^3.0.0",
