--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "dotenv": "^11.0.0",
     "formik": "^2.2.9",
     "gatsby": "^4.5.0",
-    "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-analytics": "^4.5.0",
     "gatsby-plugin-image": "^2.5.0",
     "gatsby-plugin-manifest": "^4.5.0",
@@ -82,6 +81,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
     "gatsby-remark-code-titles": "^1.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
