--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
     "gatsby-plugin-sharp": "^4.5.0",
     "gatsby-plugin-sitemap": "^5.5.0",
     "gatsby-plugin-styled-components": "^5.5.0",
+    "gatsby-plugin-twitter": "^4.5.0",
     "gatsby-plugin-typography": "^4.5.0",
     "gatsby-remark-autolink-headers": "^5.5.0",
+    "gatsby-remark-embedder": "^5.0.0",
     "gatsby-remark-images": "^6.5.0",
     "gatsby-remark-prismjs": "^6.5.0",
     "gatsby-source-filesystem": "^4.5.0",
     "gatsby-transformer-remark": "^5.5.0",
     "gatsby-transformer-sharp": "^4.5.0",
+    "mdx-embed": "^0.0.22",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.2.1",
     "prismjs": "^1.24.1",
