--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formik": "^2.2.9",
     "gatsby": "^4.5.0",
     "gatsby-plugin-google-analytics": "^4.5.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.5.0",
     "gatsby-plugin-manifest": "^4.5.0",
     "gatsby-plugin-mdx": "^3.5.0",
