--- a/package.json
+++ b/package.json
@@ -19,38 +19,38 @@
     "url": "git@github-gabroun:gabroun/malikgabroun.git"
   },
   "dependencies": {
-    "@codesandbox/sandpack-react": "^0.12.0",
-    "@fontsource/fira-mono": "^4.5.0",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "dotenv": "^11.0.0",
+    "@codesandbox/sandpack-react": "^0.19.9",
+    "@fontsource/fira-mono": "^4.5.8",
+    "@mdx-js/mdx": "v1",
+    "@mdx-js/react": "v1",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
-    "gatsby": "^4.5.0",
-    "gatsby-plugin-google-analytics": "^4.5.0",
+    "gatsby": "^4.14.1",
+    "gatsby-plugin-google-analytics": "^4.14.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^2.5.0",
-    "gatsby-plugin-manifest": "^4.5.0",
-    "gatsby-plugin-mdx": "^3.5.0",
-    "gatsby-plugin-mdx-embed": "^0.0.22",
+    "gatsby-plugin-image": "^2.14.1",
+    "gatsby-plugin-manifest": "^4.14.0",
+    "gatsby-plugin-mdx": "^3.15.0",
+    "gatsby-plugin-mdx-embed": "^1.0.0",
     "gatsby-plugin-mdx-prismjs": "^1.0.4",
     "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-netlify": "^3.14.0",
-    "gatsby-plugin-offline": "^5.5.0",
-    "gatsby-plugin-react-helmet": "^5.5.0",
+    "gatsby-plugin-netlify": "^4.4.0",
+    "gatsby-plugin-offline": "^5.14.1",
+    "gatsby-plugin-react-helmet": "^5.14.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
-    "gatsby-plugin-robots-txt": "^1.6.8",
-    "gatsby-plugin-sharp": "^4.5.0",
-    "gatsby-plugin-sitemap": "^5.5.0",
-    "gatsby-plugin-styled-components": "^5.5.0",
-    "gatsby-plugin-twitter": "^4.5.0",
-    "gatsby-plugin-typography": "^4.5.0",
-    "gatsby-remark-autolink-headers": "^5.5.0",
-    "gatsby-remark-images": "^6.5.0",
-    "gatsby-remark-prismjs": "^6.5.0",
-    "gatsby-source-filesystem": "^4.5.0",
+    "gatsby-plugin-robots-txt": "^1.7.1",
+    "gatsby-plugin-sharp": "^4.14.1",
+    "gatsby-plugin-sitemap": "^5.14.0",
+    "gatsby-plugin-styled-components": "^5.14.0",
+    "gatsby-plugin-twitter": "^4.14.0",
+    "gatsby-plugin-typography": "^4.14.0",
+    "gatsby-remark-autolink-headers": "^5.14.0",
+    "gatsby-remark-images": "^6.14.0",
+    "gatsby-remark-prismjs": "^6.14.0",
+    "gatsby-source-filesystem": "^4.14.0",
     "gatsby-transformer-remark": "^5.5.0",
-    "gatsby-transformer-sharp": "^4.5.0",
-    "mdx-embed": "^0.0.22",
+    "gatsby-transformer-sharp": "^4.14.0",
+    "mdx-embed": "^1.0.0",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.2.1",
     "prismjs": "^1.24.1",
@@ -65,18 +65,23 @@
     "typography": "^0.16.21"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/core": "^7.18.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.8",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-env": "^7.18.0",
+    "@babel/preset-react": "^7.17.12",
     "@testing-library/cypress": "^8.0.1",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^13.2.0",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-helmet": "^6.1.5",
+    "@types/styled-components": "^5.1.25",
     "axe-core": "^4.3.5",
     "babel-jest": "^27.3.1",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^2.0.2",
-    "babel-preset-gatsby": "^2.5.0",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-styled-components": "^2.0.7",
+    "babel-preset-gatsby": "^2.15.0",
     "cypress": "^9.2.1",
     "cypress-axe": "^0.14.0",
     "eslint": "^8.6.0",
@@ -86,10 +91,13 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
     "gatsby-remark-code-titles": "^1.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
-    "start-server-and-test": "^1.14.0"
+    "start-server-and-test": "^1.14.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^4.6.4"
   }
 }
