--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "axe-core": "^4.3.5",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.5",
@@ -84,14 +86,13 @@
     "babel-preset-gatsby": "^2.15.0",
     "cypress": "^9.2.1",
     "cypress-axe": "^0.14.0",
-    "eslint": "^8.6.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
-    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
     "gatsby-remark-code-titles": "^1.1.0",
     "identity-obj-proxy": "^3.0.0",
