--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "gatsby build",
     "clean": "gatsby clean",
     "build:prod": "gatsby build && gatsby serve",
+    "lint": "eslint \"src/**/*.{js,jsx, ts, tsx}\" ",
     "test": "jest",
     "test:update": "jest --silent -u",
     "cy:open": "cypress open",
@@ -65,7 +66,8 @@
     "typography": "^0.16.21"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.0",
+    "@babel/core": "^7.18.2",
+    "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
@@ -89,6 +91,7 @@
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
